Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "svg01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqS90luIwPMmHMFnAkn+FJ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOFV21HyKNZB1y5AJXTLo3z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,7 +224,7 @@
         "  <rect width=\"300\" height=\"100\" style=\"fill:rgb(0,0,255);stroke-width:20;stroke:rgb(0,0,0)\" />\n",
         "</svg>"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1040,7 +1041,7 @@
         "  <path d=\"M150 0 L75 200 L225 200 Z\" style=\"fill:cyan;\" />\n",
         "</svg>"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2164,12 +2165,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YO8pQr8H6oq_",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 419
-        },
-        "outputId": "f8e2b56a-6812-44a6-da27-d9b760023b57"
+        "id": "YO8pQr8H6oq_"
       },
       "source": [
         "%%html\n",
@@ -2181,27 +2177,7 @@
         "</svg>\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "\n",
-              "<svg width=\"400\" height=\"400\">\n",
-              "  <rect x=\"20\" y=\"20\" width=\"250\" height=\"250\" style=\"fill:blue\">\n",
-              "    <animate attributeType=\"CSS\" attributeName=\"opacity\" from=\"1\" to=\"0\" dur=\"5s\" repeatCount=\"indefinite\" />\n",
-              "  </rect>\n",
-              "</svg>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2236,7 +2212,7 @@
         "  Sorry, your browser does not support inline SVG.\n",
         "</svg>\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2299,7 +2275,7 @@
         "  Sorry, your browser does not support inline SVG.  \n",
         "</svg>\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2369,7 +2345,7 @@
         "  Sorry, your browser does not support inline SVG.  \n",
         "</svg>\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2429,7 +2405,7 @@
         "  Sorry, your browser does not support inline SVG.\n",
         "</svg>"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2501,7 +2477,7 @@
         "  </g>\n",
         "</svg>\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2551,11 +2527,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "8OS3OF5HitRY",
-        "outputId": "1afde472-51a7-46bd-a457-f9dfc7fc25d6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        }
+        },
+        "outputId": "1afde472-51a7-46bd-a457-f9dfc7fc25d6"
       },
       "source": [
         "# urlにsvgコードを組み込む\n",
@@ -2573,7 +2549,7 @@
         "    <div class=\"box\">BOX</div>\n",
         "</div>"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2606,11 +2582,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "FNMrORHukt5z",
-        "outputId": "9b4608b2-1bc7-42e6-ad05-6a956f381ccd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        }
+        },
+        "outputId": "9b4608b2-1bc7-42e6-ad05-6a956f381ccd"
       },
       "source": [
         "%%html\n",
@@ -2626,7 +2602,7 @@
         "    <div class=\"box\">BOX</div>\n",
         "</div>"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2658,11 +2634,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "EAuptu-jl2x4",
-        "outputId": "43c392a6-9943-4743-c97c-def40c7f4c75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 147
-        }
+        },
+        "outputId": "43c392a6-9943-4743-c97c-def40c7f4c75"
       },
       "source": [
         "%%html\n",
@@ -2694,7 +2670,7 @@
         "    }\n",
         "</script>"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2742,11 +2718,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y8iWe-ZFmUAG",
-        "outputId": "81999d44-24cd-4b5a-e7e9-2d612d217836",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "outputId": "81999d44-24cd-4b5a-e7e9-2d612d217836"
       },
       "source": [
         "%%html\n",
@@ -2771,7 +2747,7 @@
         "        points=\"128.25,26 147.19,96.69 95.44,148.44 24.75,129.5 5.81,58.81 57.56,7.06 \" /> \n",
         "</svg>"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2812,11 +2788,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "z4Dy6MzfwrNo",
-        "outputId": "9b877871-2d92-4aab-b909-a5003c8b47ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        }
+        },
+        "outputId": "9b877871-2d92-4aab-b909-a5003c8b47ff"
       },
       "source": [
         "%%html\n",
@@ -2832,7 +2808,7 @@
         "    <div class=\"box\">BOX</div>\n",
         "</div>"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2864,11 +2840,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "rp8d02MMpjjK",
-        "outputId": "654293c4-ee48-40d3-cbb1-c4446ab7bf29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 658
-        }
+        },
+        "outputId": "654293c4-ee48-40d3-cbb1-c4446ab7bf29"
       },
       "source": [
         "%%html\n",
@@ -2908,7 +2884,7 @@
         "    <!-- M=始点のx座標 y座標 L=直線で次点のx座標 y座標 C=曲線で次点、中間2点のx座標 y座標 Z=閉じる -->\n",
         "</svg>"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2964,11 +2940,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "sB7qkgwdqQg4",
-        "outputId": "e1e96788-a107-4c71-8991-86c16ec5be2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        }
+        },
+        "outputId": "e1e96788-a107-4c71-8991-86c16ec5be2e"
       },
       "source": [
         "%%html\n",
@@ -2989,7 +2965,7 @@
         "    </svg>\n",
         "</div>"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3026,11 +3002,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "FZClctzaroSb",
-        "outputId": "76f7eeb3-4633-4bc8-84a0-bca23acb816c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "outputId": "76f7eeb3-4633-4bc8-84a0-bca23acb816c"
       },
       "source": [
         "%%html\n",
@@ -3052,7 +3028,7 @@
         "        type=\"image/svg+xml\" width=\"300\" height=\"300\" viewport=\"0 0 600 600\"></object>\n",
         "</div>"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3084,6 +3060,57 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dcQsc2215S05"
+      },
+      "source": [
+        "# BoxySVG を使ってみる"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "smy9AntA5j4Q"
+      },
+      "source": [
+        "オンライン SVG エディターに BoxySVG というのがある。  これを使ってみる。 \n",
+        "\n",
+        "BoxySVG の特徴はエクスポートとかしなくても、描いた画像が同時に SVG として、文字列で見れる。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YSzpTmau5WiY"
+      },
+      "source": [
+        "上部にメニューバーがある。\n",
+        "\n",
+        "File, Edit, View, Object, Shape, Tools, Panels, Help\n",
+        "\n",
+        "左側にツールがアイコンで縦に並んでいる。\n",
+        "\n",
+        "Transform Tool, Edit Tool, Pan Tool, Quad Bezier Tool, Cubic Bezier Tool, Arc Tool, Freehand Tool, Blob Tool, Text Tool, Text Path Tool, View Tool, Rectangle Tool, Circle Tool, Ellipse Tool, Ring Tool, Pie Tool, Crescent Tool, Triangle Tool, N-gon Tool, Star Tool, Cog Tool, Arrow Tool, Cross Tool, Line Tool, Polyline Tool, Poligon Tool。\n",
+        "\n",
+        "右側がパネルバーというのかな、縦にパネルを開くボタン(アイコン)がある。 \n",
+        "\n",
+        "Fill Panel, Stroke Panel, Compositing Panel, Typography Panel, Geometry Panel, Meta Panel, Shape Panel, Arrangement Panel, Objects Panel, Defs Panel, Library Panel, Gnenerators Panel, Export Panel, History Panel, Elements Panel。\n",
+        "\n",
+        "メニューの Tools と Panels はそれぞれのバーにあるアイコンに対応する。\n",
+        "\n",
+        "メニューの Files は、New, New from Selected, New from Clipboard, New from URL, Open form Disk, Open form Cloud, Open Recent, Save, Save to Disc as, Save to Cloud as, Import from Disk, Import from URL, Export to Disk, Share, Print, Reload, Close。\n",
+        "\n",
+        "メニューの Edit は、Undo: Move, Redo, Cut, Copy, Paste, Duplicate, Delete, Select All, Deselect All, Preferences。\n",
+        "\n",
+        "メニューの Object は、Group, Ungroup, Clip, Unclip, Mask, Unmask, Raise, Lower, Rase to Front, Lower to Back, Rotate +90°, Rotate -90°, Flip X, Flip Y, Remove Transform, Reduce Transform。\n",
+        "\n",
+        "メニューの Shape は、Grab Paint Color, Reorient, Reverse, Unite, Subtract, Intersect, Exclude, Shape to Path, Stroke to Path, Join Paths, Split Path, Open Path, Close Path, Inset Path, Outset Path, Simplify Path, Complexity Path, Join Nodes, Split Node, Delete Node, Break Node。\n",
+        "\n",
+        "メニューの Help は、About, Hopepage, Blog, Tutorials, Ideas, Bugs, Questions。\n"
       ]
     },
     {
