Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -6,7 +6,7 @@
       "name": "svg01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOfjfP58ddOmkW9jtdl8gJb",
+      "authorship_tag": "ABX9TyMkCXT40H94jgipaEZ2T+kP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3100,9 +3100,11 @@
         "\n",
         "右側がパネルバーというのかな、縦にパネルを開くボタン(アイコン)がある。 \n",
         "\n",
-        "Fill Panel, Stroke Panel, Compositing Panel, Typography Panel, Geometry Panel, Meta Panel, Shape Panel, Arrangement Panel, Objects Panel, Defs Panel, Library Panel, Gnenerators Panel, Export Panel, History Panel, Elements Panel。\n",
+        "Fill Panel, Stroke Panel, Compositing Panel, Typography Panel, Geometry Panel, Meta Panel, Shape Panel, Arrangement Panel, Objects Panel, Defs Panel, Library Panel, Gnenerators Panel, Export Panel, History Panel。\n",
         "\n",
-        "メニューの Tools と Panels はそれぞれのバーにあるアイコンに対応する。\n",
+        "下に一つだけ Elements というボタンがあってこれが、Elements Panel。\n",
+        "\n",
+        "メニューの Tools と Panels はそれぞれ Tools と Panels に対応する。\n",
         "\n",
         "メニューの Files は、New, New from Selected, New from Clipboard, New from URL, Open form Disk, Open form Cloud, Open Recent, Save, Save to Disc as, Save to Cloud as, Import from Disk, Import from URL, Export to Disk, Share, Print, Reload, Close。\n",
         "\n",
@@ -3116,31 +3118,78 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "moI-i_7Rm39J"
+      },
+      "source": [
+        "絵を描いて、Elements ボタンを押して出てくる svg テキストに width を加えるだけで、下のように html で表示ができる!!!!"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "OaideVfPH9eG",
-        "outputId": "00f73bf6-4e99-4c6f-b9a3-358ceb6a7605",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 220
-        }
+          "height": 196
+        },
+        "id": "OaideVfPH9eG",
+        "outputId": "838fa7ad-8f6d-4b75-f4fa-9e40fa493000"
       },
       "source": [
         "%%html\n",
-        "<svg width=\"600\" height=\"200\" viewBox=\"77.225 71.335 168.194 148.56\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:bx=\"https://boxy-svg.com\">\n",
+        "<svg width=\"200\"  viewBox=\"77.225 71.335 168.194 148.56\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:bx=\"https://boxy-svg.com\">\n",
         "  <defs></defs>\n",
         "  <path d=\"M 155.532 103.106 Q 187.792 67.607 200.714 103.106 L 219.429 154.52 Q 232.351 190.019 187.169 190.019 L 121.732 190.019 Q 76.55 190.019 108.81 154.52 Z\" style=\"fill: rgb(216, 216, 216);\" bx:shape=\"triangle 76.55 67.607 155.801 122.412 0.714 0.29 1@5f0d31b2\"></path>\n",
         "</svg>"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<svg width=\"600\" height=\"200\" viewBox=\"77.225 71.335 168.194 148.56\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:bx=\"https://boxy-svg.com\">\n",
+              "<svg width=\"200\"  viewBox=\"77.225 71.335 168.194 148.56\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:bx=\"https://boxy-svg.com\">\n",
               "  <defs></defs>\n",
               "  <path d=\"M 155.532 103.106 Q 187.792 67.607 200.714 103.106 L 219.429 154.52 Q 232.351 190.019 187.169 190.019 L 121.732 190.019 Q 76.55 190.019 108.81 154.52 Z\" style=\"fill: rgb(216, 216, 216);\" bx:shape=\"triangle 76.55 67.607 155.801 122.412 0.714 0.29 1@5f0d31b2\"></path>\n",
+              "</svg>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qRwJm4v02Vd6",
+        "outputId": "49fe30ba-db26-4684-fec9-29e7d7b7e8f4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 215
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<svg width=\"200px\" viewBox=\"110 79.333 79.334 77.334\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+        "  <defs></defs>\n",
+        "  <circle style=\"fill: rgb(255, 19, 196);\" cx=\"174.667\" cy=\"138.667\" r=\"48.557\"></circle>\n",
+        "</svg>"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<svg width=\"200px\" viewBox=\"110 79.333 79.334 77.334\" xmlns=\"http://www.w3.org/2000/svg\">\n",
+              "  <defs></defs>\n",
+              "  <circle style=\"fill: rgb(255, 19, 196);\" cx=\"174.667\" cy=\"138.667\" r=\"48.557\"></circle>\n",
               "</svg>"
             ],
             "text/plain": [
