Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwC/ucadhOACpzRbbpyIMX",
+      "authorship_tag": "ABX9TyP4IzRzQfMCuKGMNvsknEz5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1161,34 +1161,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RLUm1DaB5YTk",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 134
-        },
-        "outputId": "3b4f90b8-37d0-4a38-e002-38b052a1a39b"
-      },
-      "source": [
-        "$ ./Test\n",
-        "What is 5! ?\n",
-        "120\n",
-        "You're right!"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-31-1421bba6cca2>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    $ ./Test\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "o22NOUIZ5aYf"
       },
       "source": [
@@ -1290,84 +1262,84 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4LPJq0oa9bO8"
+        "id": "4LPJq0oa9bO8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ded2fd49-3d3b-4888-ddc1-f03c726b0f24"
       },
       "source": [
-        "-- qualified.hs\n",
-        "module Main where\n",
+        "%%writefile importqualified.hs\n",
         "\n",
         "import qualified Data.Map as M\n",
         "\n",
-        "errorsPerLine = M.fromList\n",
-        "    [ (\"Chris\", 472), (\"Don\", 100), (\"Simon\", -5) ]\n",
+        "errorsPerLine = M.fromList [ (\"Chris\", 472), (\"Don\", 100), (\"Simon\", -5) ]\n",
         "\n",
-        "main = do putStrLn \"Who are you?\"\n",
-        "          name <- getLine\n",
-        "          case M.lookup name errorsPerLine of\n",
-        "              Nothing -> putStrLn \"I don't know you\"\n",
-        "              Just n  -> do putStr \"Errors per line: \"\n",
-        "                            print n"
+        "main = do \n",
+        "    putStrLn \"Who are you?\"\n",
+        "    name <- getLine\n",
+        "    case M.lookup name errorsPerLine of\n",
+        "        Nothing -> putStrLn \"I don't know you\"\n",
+        "        Just n  -> do putStr \"Errors per line: \"\n",
+        "                      print n"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zV0Gpb__-GwF"
-      },
-      "source": [
-        "標準ライブラリにないものを使う場合は\n",
-        "\n",
-        "1. http://hackage.haskell.org/packages/hackage.html\n",
-        "1. https://wiki.haskell.org/Applications_and_libraries\n",
-        "\n",
-        "からダウンロードして\n"
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting importqualified.hs\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8S8lp-j_-dON"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CwHKDTs_jGqK",
+        "outputId": "3576930e-0d33-48fa-e014-bb0a426ef303"
       },
       "source": [
-        " runhaskell Setup configure\n",
-        " runhaskell Setup build\n",
-        " runhaskell Setup install"
+        "!echo Don | runghc importqualified.hs"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "u-Agmwju-f-_"
-      },
-      "source": [
-        "省いたトピック\n",
-        "\n",
-        "* List comprehensions https://wiki.haskell.org/List_comprehension\n",
-        "* Type synonyms https://wiki.haskell.org/Type#Type_and_newtype\n",
-        "* https://wiki.haskell.org/Type\n",
-        "* https://wiki.haskell.org/Newtype\n",
-        "* https://wiki.haskell.org/Infix_operator\n",
-        "* Lambda abstractions https://wiki.haskell.org/Lambda_abstraction\n",
-        "* https://wiki.haskell.org/Section_of_an_infix_operator\n",
-        "* Monads https://wiki.haskell.org/Category:Monad\n",
-        "* File I/O https://wiki.haskell.org/Tutorials/Programming_Haskell/String_IO\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Who are you?\n",
+            "Errors per line: 100\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "V01fOAB7AYN_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sgIS8yV9kPZ2",
+        "outputId": "ecbf429a-3fed-4c52-e517-ffdeac64a4dc"
       },
       "source": [
-        "# いまここ\n"
+        "!echo Bob | runghc importqualified.hs"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Who are you?\n",
+            "I don't know you\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1382,37 +1354,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BT0js6Fkczb7"
-      },
-      "source": [
-        "Prelude> :set prompt \"ghci> \"\n",
-        "ghci> "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "XvyLhuBKc8zr"
-      },
-      "source": [
-        "Learn You A Haskell For Great Good! の最初は `Prelude>` というプロンプトは長過ぎるので `ghci> ` というプロンプトにしている。 \n",
-        "\n",
-        "本質とは関係ないところから入っているけど、`:` で始まるコマンドがあることが学べるし、なにより、Haskell ではなんでも変えられることが示されている。\n",
-        "\n",
-        "あと、普通の言語では repl はおまけみたいなところがあるけど、Haskell ではそれがけっこうメインらしい、とかも感じられるかもしれない。\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Lat2FpdBnUK3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 134
-        },
-        "outputId": "bcae91d5-11a3-481d-f586-d083acb85471"
+        "id": "Lat2FpdBnUK3"
       },
       "source": [
         "ghci> 2 + 15\n",
@@ -1425,70 +1367,123 @@
         "2.5\n"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FQCMMJLxdoam",
+        "outputId": "374e9b7f-4d3a-446d-b9f9-180e2f92323c"
+      },
+      "source": [
+        "!ghc -e '2 + 15'\n",
+        "!ghc -e '49 * 100'\n",
+        "!ghc -e '1892 - 1472'\n",
+        "!ghc -e '5 / 2'"
+      ],
+      "execution_count": 78,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-19eaf32d164b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    ghc -e '5'\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "17\n",
+            "4900\n",
+            "420\n",
+            "2.5\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AFkAK5ZEnkFW"
+        "id": "AFkAK5ZEnkFW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a152692d-8e90-490a-9f6f-72b2b25a429a"
       },
       "source": [
-        "ghci> (50 * 100) - 4999\n",
-        "1\n",
-        "ghci> 50 * 100 - 4999\n",
-        "1\n",
-        "ghci> 50 * (100 - 4999)\n",
-        "-244950\n"
+        "!ghc -e '(50 * 100) - 4999'\n",
+        "!ghc -e '50 * 100 - 4999'\n",
+        "!ghc -e '50 * (100 - 4999)'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "1\n",
+            "-244950\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wOvMZGQ5nmR4"
+        "id": "wOvMZGQ5nmR4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "88b26040-5a9f-44ef-e06e-6f59eca022af"
       },
       "source": [
-        "ghci> True && False\n",
-        "False\n",
-        "ghci> True && True\n",
-        "True\n",
-        "ghci> False || True\n",
-        "True\n",
-        "ghci> not False\n",
-        "True\n",
-        "ghci> not (True && True)\n",
-        "False\n"
+        "!ghc -e 'True && False'\n",
+        "!ghc -e 'True && True'\n",
+        "!ghc -e 'False || True'\n",
+        "!ghc -e 'not False'\n",
+        "!ghc -e 'not (True && True)'\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MDS-LdXBocT4"
+        "id": "MDS-LdXBocT4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "39ea9612-51e1-4c48-a758-04d97b2ad9b1"
       },
       "source": [
-        "ghci> succ 8\n",
-        "9\n",
-        "ghci> min 9 10\n",
-        "9\n",
-        "ghci> min 3.4 3.2\n",
-        "3.2\n",
-        "ghci> max 100 101\n",
-        "101\n"
+        "!ghc -e 'succ 8'\n",
+        "!ghc -e 'min 9 10'\n",
+        "!ghc -e 'min 3.4 3.2'\n",
+        "!ghc -e 'max 100 101'\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "9\n",
+            "3.2\n",
+            "101\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1504,28 +1499,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iBs4X0rco0E8"
+        "id": "iBs4X0rco0E8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "780edcaa-d2fe-486f-9827-c7101b43d021"
       },
       "source": [
-        "ghci> succ 9 + max 5 4 + 1\n",
-        "16\n",
-        "ghci> (succ 9) + (max 5 4) + 1\n",
-        "16\n"
+        "!ghc -e 'succ 9 + max 5 4 + 1'\n",
+        "!ghc -e '(succ 9) + (max 5 4) + 1'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "16\n",
+            "16\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SIVVq2yRpOM_"
+        "id": "SIVVq2yRpOM_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6ccbfe83-97dd-4dd6-b6c3-455c358088b1"
       },
       "source": [
-        "ghci> succ 9 * 10\n",
-        "100\n"
+        "!ghc -e 'succ 9 * 10'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1539,25 +1556,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ap8spQwxpd0c"
+        "id": "Ap8spQwxpd0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "96eaf6fa-8c37-46d6-dcd6-b47186fc32ad"
       },
       "source": [
-        "92 // 10"
+        "!ghc -e '92 `div` 10'\n",
+        "!ghc -e '92 / 10'\n",
+        "!ghc -e '92 `mod` 10'"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7Pw30dR1poQy"
-      },
-      "source": [
-        "ghci> 92 `div` 10\n",
-        "9\n"
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "9.2\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1565,40 +1586,115 @@
         "id": "g2awhpFhVCQL"
       },
       "source": [
-        "### 関数"
+        "# 関数"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XkZ08fY0VEv6"
+        "id": "XkZ08fY0VEv6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "22fde204-eae8-4f3f-d1cd-ee7f880577a6"
       },
       "source": [
-        "Prelude> doubleMe x = x + x\n",
-        "Prelude> doubleMe 9\n",
-        "18\n",
-        "Prelude> doubleMe 8.3\n",
-        "16.6\n"
+        "%%writefile doubleme.hs\n",
+        "doubleMe x = x + x\n",
+        "\n",
+        "main = do\n",
+        "    print(doubleMe 9)\n",
+        "    print(doubleMe 8.3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting doubleme.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZJDh4GipVhYq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WICZfSInfhEF",
+        "outputId": "631c26c5-3baf-4bf4-91f2-1aa9cdbb541c"
       },
       "source": [
-        "Prelude> doubleUs x y = x*2 + y*2   \n",
-        "Prelude> doubleUs 4 9\n",
-        "26\n",
-        "Prelude> doubleUs 2.3 34.2\n",
-        "73.0\n",
-        "Prelude> doubleUs 28 88 + doubleMe 123\n",
-        "478\n"
+        "!runghc doubleme.hs"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "18\n",
+            "16.6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZJDh4GipVhYq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "83dc3f35-7898-4697-a41a-024cbab1f62f"
+      },
+      "source": [
+        "%%writefile doubleus.hs\n",
+        "doubleMe x = x + x\n",
+        "doubleUs x y = x*2 + y*2   \n",
+        "\n",
+        "main = do\n",
+        "    print(doubleUs 4 9)\n",
+        "    print(doubleUs 2.3 34.2)\n",
+        "    print(doubleUs 28 88 + doubleMe 123)"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting doubleus.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-LA5XHXngNtw",
+        "outputId": "dfc6a7f3-f472-405c-9436-85374e0d9626"
+      },
+      "source": [
+        "!runghc doubleus.hs"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "26\n",
+            "73.0\n",
+            "478\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
